vlib/v/checker/tests/immutable_field_postfix.vv
struct Aaa {
	i int
}

fn main() {
	mut a := Aaa{}
	a.i++
	a.i--
}
